<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mi_tienda">

    <fragment
        android:id="@+id/nav_mi_tienda"
        android:name="mx.com.encargalo.tendero.Inicio_sesion.ui.Mi_tienda.tn_frgmenumitienda"
        android:label="@string/menu_mitienda"
        tools:layout="@layout/fragment_tn_frgmenumitienda" />

    <fragment
        android:id="@+id/nav_mis_productos"
        android:name="mx.com.encargalo.tendero.Inicio_sesion.ui.Mis_productos.ga_frgmenumisproductos"
        android:label="@string/menu_misproductos"
        tools:layout="@layout/fragment_ga_frgmenumisproductos" />

    <fragment
        android:id="@+id/nav_mis_ordenes"
        android:name="mx.com.encargalo.tendero.Inicio_sesion.ui.Mis_ordenes.od_frgmenumisordenes"
        android:label="@string/menu_misordenes"
        tools:layout="@layout/fragment_od_frgmenumisordenes" />

    <fragment
        android:id="@+id/nav_mi_publicidad"
        android:name="mx.com.encargalo.tendero.Inicio_sesion.ui.Mi_publicidad.pb_frgmenupublicidad"
        android:label="@string/menu_mipublicidad"
        tools:layout="@layout/fragment_pb_frgmenupublicidad" />

    <fragment
        android:id="@+id/nav_mi_aprendizaje"
        android:name="mx.com.encargalo.tendero.Inicio_sesion.ui.Mi_Aprendizaje.ap_frgmaterialesdeaprendizaje"
        android:label="@string/menu_miaprendizaje"
        tools:layout="@layout/fragment_ap_frgmaterialesdeaprendizaje" />

    <fragment
        android:id="@+id/nav_soporte"
        android:name="mx.com.encargalo.tendero.Inicio_sesion.ui.Soporte.sp_frgmenusoporte"
        android:label="@string/menu_soporte"
        tools:layout="@layout/fragment_sp_frgmenusoporte" >
        <action
            android:id="@+id/action_nav_soporte_to_nav_configuracionnotificaiones"
            app:destination="@id/nav_configuracionnotificaiones" />
        <action
            android:id="@+id/action_nav_soporte_to_nav_centroayuda"
            app:destination="@id/nav_centroayuda" />

        <action
            android:id="@+id/action_nav_soporte_to_nav_acercade"
            app:destination="@id/nav_acercade" />
    </fragment>
    <fragment
        android:id="@+id/nav_configuracionnotificaiones"
        android:name="mx.com.encargalo.tendero.Inicio_sesion.ui.Soporte.sp_frgconfiguracionnotificaciones"
        android:label="@string/menu_soporte"
        tools:layout="@layout/fragment_sp_frgconfiguracionnotificaciones" />

    <fragment
        android:id="@+id/nav_centroayuda"
        android:name="mx.com.encargalo.tendero.Inicio_sesion.ui.Soporte.sp_frg02_1"
        android:label="@string/menu_soporte_centro_de_ayuda"
        tools:layout="@layout/fragment_sp_frg02_1" >
        <action
            android:id="@+id/action_nav_centroayuda_to_nav_detallevideodemo"
            app:destination="@id/nav_detallevideodemo" />
    </fragment>

    <fragment
        android:id="@+id/nav_terminosYcondiciones"
        android:name="mx.com.encargalo.tendero.Inicio_sesion.ui.Soporte.sp_frg04"
        android:label="@string/menu_soporte_terminos_condiciones_terminos"
        tools:layout="@layout/fragment_sp_frg04" />

    <fragment
        android:id="@+id/nav_detallevideodemo"
        android:name="mx.com.encargalo.tendero.Inicio_sesion.ui.Soporte.sp_detallevideodemostrativo"
        android:label="@string/menu_soporte_centro_de_ayuda_btn_2"
        tools:layout="@layout/fragment_sp_detallevideodemostrativo" />
    <fragment
        android:id="@+id/nav_detallepregfre"
        android:name="mx.com.encargalo.tendero.Inicio_sesion.ui.Soporte.sp_DetallePreguntaFrecuentes"
        android:label="@string/menu_soporte_centro_de_ayuda_btn_1"
        tools:layout="@layout/fragment_sp__detalle_pregunta_frecuentes" />
    <fragment
        android:id="@+id/nav_acercade"
        android:name="mx.com.encargalo.tendero.Inicio_sesion.ui.Soporte.sp_frgacercade"
        android:label="@string/menu_soporte_acerca_de"
        tools:layout="@layout/fragment_sp_frgacercade" />
</navigation>