<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tendero.Inicio_sesion.ui.Soporte.sp_frg01">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txt_so_01_soporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/menu_soporte" />

    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="630dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_so_01_CentAyuda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_soporte_item_1"
            tools:text="@string/menu_soporte_item_1" />

        <Button
            android:id="@+id/btn_so_01_Notif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_soporte_item_2"
            tools:text="@string/menu_soporte_item_2" />

        <Button
            android:id="@+id/btn_so_01_TermyCondi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_soporte_item_3"
            tools:text="@string/menu_soporte_item_3" />

        <Button
            android:id="@+id/btn_so_01_Compartir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_soporte_item_4"
            tools:text="@string/menu_soporte_item_4" />

        <Button
            android:id="@+id/btn_so_01_AcercaDe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_soporte_item_5"
            tools:text="@string/menu_soporte_item_5" />

        <Button
            android:id="@+id/btn_so_01_CerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_soporte_item_6"
            tools:text="@string/menu_soporte_item_6" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>