<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tendero.Inicio_sesion.ui.Soporte.sp_frg02_2">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txt_so_02_2_PregFrecuentes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/menu_soporte_Preguntas_Frecuentes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="630dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_so_02_2_Pregunta01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_soporte_Preguntas_Frecuentes_preg1" />

        <Button
            android:id="@+id/btn_so_02_2_Pregunta02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_soporte_Preguntas_Frecuentes_preg2" />

        <Button
            android:id="@+id/btn_so_02_2_Pregunta03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_soporte_Preguntas_Frecuentes_preg3" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>