<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tendero.Inicio_sesion.ui.Soporte.sp_frg06">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/menu_soporte_item_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/menu_soporte_item_4" />

    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="630dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_so_06_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_soporte_compartir_website"
            tools:text="@string/menu_soporte_compartir_website" />

        <Button
            android:id="@+id/btn_so_06_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_soporte_compartir_facebook"
            tools:text="@string/menu_soporte_compartir_facebook" />

        <Button
            android:id="@+id/btn_so_06_instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_soporte_compartir_instagram"
            tools:text="@string/menu_soporte_compartir_instagram" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>