<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tendero.Inicio_sesion.ui.Soporte.sp_frg03">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/txt_so_03_notificaciones"
        android:layout_width="135dp"
        android:layout_height="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/menu_soporte_item_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/menu_soporte_item_2" />

    <LinearLayout
        android:layout_width="372dp"
        android:layout_height="630dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_so_03_notificaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_soporte_notificaciones_texto" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <Switch
                    android:id="@+id/swt_so_03_mensajes"
                    android:layout_width="198dp"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_soporte_notificaciones_switch_1"
                    tools:text="@string/menu_soporte_notificaciones_switch_1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:id="@+id/swt_so_03_actividad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_soporte_notificaciones_switch_2"
                    tools:text="@string/menu_soporte_notificaciones_switch_2" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">



                <Switch
                    android:id="@+id/swt_so_03_actualizaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_soporte_notificaciones_switch_3"
                    tools:text="@string/menu_soporte_notificaciones_switch_3" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:id="@+id/swt_so_03_ordencompra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_soporte_notificaciones_switch_4"
                    tools:text="@string/menu_soporte_notificaciones_switch_4"  />

            </TableRow>
        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>